--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,6 +31,13 @@
       "css": ["css/main.css"]
     }
   ],
+  "browser_action": {
+    "default_title": "__MSG_extName__",
+    "default_icon": {
+      "19": "icons/19.png",
+      "38": "icons/38.png"
+    }
+  },
   "web_accessible_resources": [
     "popup.html"
   ]
