--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/js": "^5.9.55",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "fuse.js": "^6.4.6",
     "moment": "^2.29.1",
     "postcss": "^8.2.8",
     "vue": "^2.6.11",
