--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "fuse.js": "^6.4.6",
     "moment": "^2.29.1",
     "postcss": "^8.2.8",
+    "postcss-prefix-selector": "^1.9.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.0",
+    "vuetify": "^2.5.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -25,7 +26,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "~4.5.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
