add options, bug fixes

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -37,5 +37,9 @@
       "19": "icons/19.png",
       "38": "icons/38.png"
     }
+  },
+  "options_ui": {
+    "page": "options.html",
+    "browser_style": true
   }
 }
