--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "moment": "^2.29.1",
     "postcss": "^8.2.8",
     "postcss-prefix-selector": "^1.9.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.1",
