--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-prefix-selector": "^1.9.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
+    "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.1",
