--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Trustnet",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service build --mode development --watch",
@@ -17,6 +17,7 @@
     "postcss-prefix-selector": "^1.9.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
+    "trusted-types": "^2.0.0",
     "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
