--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-browser-extension": "latest",
+    "vue-cli-plugin-browser-extension": "~0.25.2",
     "vue-cli-plugin-vuetify": "~2.2.2",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
